--- a/navigation_css/admin.css
+++ b/navigation_css/admin.css
@@ -11,18 +11,23 @@
     background-color: rgba(20, 20, 20, 0.94);
 }
 .container__bar{
-    flex: 2;
+    display: flex;
+    flex-direction: column;
+    flex: 2.4;
     min-height: calc(100vh - 68px);
+    background-color: #fff;
+    padding: 0 8px;
 }
 .container__bar__list{
     width: 100%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .container__bar__item{
     display: flex;
     align-items: center;
-    width: 100%;
     font-size: 1.8rem;
     font-weight: 700;
     background-color: #eef2f0;
@@ -30,6 +35,13 @@
     width: 100%;
     padding: 12px 16px;
     border: 1px solid #333;
+    border-radius: 4px;
+    margin-top: 8px;
+}
+
+/* height: 46px; */
+.container__bar__item:last-child{
+    margin-bottom: 40px;
 }
 
 .container__bar__item--active{
@@ -55,8 +67,8 @@
 }
 
 .container__bar__item__avt{
-    width: 60px;
-    height: 60px;
+    width:  80px;
+    height: 80px;
     object-fit: cover;
     border-radius: 50%;
     border: 1px solid #333;
@@ -66,6 +78,14 @@
     font-size: 14px;
     margin: 6px 0;
 }
+
+.container__bar__logout{
+    flex: 1;
+    display: flex;
+    align-items: flex-end;
+}
+
+
 
 /* container__show */
 .container__show{
@@ -99,12 +119,42 @@
     height: 70px;
 }
 
+.container__show__cart__head__input__box{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 280px;
+}
+
+.show__find__id__box{
+    position: absolute;
+    top: calc(100% + 4px);
+    left: 6px;
+    width: 100%;
+}
+
+.show__find_id{
+
+    height: 34px;  
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    font-size: 14px;
+    padding: 8px 6px 6px;
+    width: calc(100% - 6px);
+    color: #666;
+    border-left: 2px solid #ff1010;
+    border-bottom: 3px solid #ff1010; 
+}
+
 .show__input__id{
     height: 34px;
-    width: 280px;
     font-size: 16px;
+    width: 100%;
     padding: 8px 6px 6px;
     margin-right: 12px;
+    outline: none;
+    border: 0px;
 }
 
 .show__input__package{
@@ -139,44 +189,45 @@
     padding: 0px 6px;
 }
 
-table{
+.table__show{
     border-collapse: collapse;
     width: 100%;
     
     table-layout: fixed;
 }
 
-tr{
+.tr__show{
     height: 32px;
 }
-th:nth-child(1){
+.th__show:nth-child(1){
     width: 110px;
 }
-th:nth-child(8){
+.th__show:nth-child(8){
     width: 100px;
 }
-th:nth-child(3){
+.th__show:nth-child(3){
     width: 52px;
 }
 
-th{
+.th__show{
     font-size: 18px;
     font-weight: 700;
 
 }
-td{ 
+.td__show{ 
     font-size: 16px;
+    height: 32px;
 }
 
-td i{
+.td__show i{
     margin: 0 6px;
     cursor: pointer;
 }
-td i:hover{
+.td__show i:hover{
     color: #9e9e9e;
 }
 
-table, th, td {
+.table__show, .th__show, .td__show {
     border: 1px solid rgb(255, 255, 255);
     text-align: center;
     vertical-align: middle;
@@ -230,3 +281,125 @@ table, th, td {
     margin-right: 18px;
     padding: 4px 0 2px;
 }
+
+
+
+/* toast */
+
+.btn{
+    display: inline-block;
+    text-decoration: none;
+    background-color: transparent;
+    /* background-color: #fff; */
+    border: none;
+    outline: none;
+    color: #f4f4f5;
+    padding: 12px 48px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: opacity .2s ease;
+    min-width: 120px;
+}
+.btn:hover{
+    opacity: 0.8;
+}
+.btn + .btn{
+    margin-left: 16px;
+}
+.btn--sucess{
+    background-color: #83bc4b;
+}
+.btn--warning{
+    background-color: #f4ba3f;
+}
+.btn--danger{
+    background-color: #ed6c4a;
+}
+.btn--disabel{
+    opacity: 0.5 !important;
+    cursor: default;
+}
+
+#toast{
+    position: fixed;
+    top: 32px;
+    right: 32px;   
+    z-index: 9999;  /* cho số cao cao để tránh bị đè lên những thằng khác*/
+}
+.toast{
+    display: flex;
+    align-items: center;
+    border-radius: 2px;
+    border-left: 4px solid;
+    box-shadow: 0 5px 8px rgba(0,0,0,0.08);
+    min-width: 400px;
+    max-width: 450px;
+    line-height: 1.5;
+    transition: all linear .3s;
+    background-color: #fff;
+}
+
+@keyframes slideInleft{
+    from{
+        opacity: 0;
+    transform: translateX(calc(100% + 32px));
+    }
+    to{
+        opacity: 1;
+    transform: translateX(0);
+    }
+}
+
+@keyframes fadeOut{
+    to{
+        opacity: 0;
+    }
+}
+.toast + .toast{
+    margin-top: 20px;
+}
+.toast__icon,
+.toast__close{
+    padding: 16px;
+}
+.toast__icon{
+    font-size: 24px;
+}
+.toast__close{
+    font-size: 20px;
+    color: rgba(0,0,0,0.3);
+}
+.toast__body{
+    /* chữ có ngắn thì icon close không bị xít gần */
+    flex-grow: 1;
+}
+.toast__title{
+    font-size: 16px;
+    font-weight: 600;
+    color: #333;
+}
+.toast__msg{
+    font-size: 14px;
+    color: #888;
+    margin-top: 4px;
+}
+.toast__close{
+    cursor: pointer;
+}
+
+.toast__success{
+    border-color: #74d571;
+}
+
+.toast__error{
+    border-color: #ed6c49;
+}
+
+.toast__success .toast__icon{
+    color: #74d571;
+}
+.toast__error .toast__icon{
+    color: #ed6c49;
+}
+
+/* </toast */
