--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -36,7 +36,7 @@
 
 .container {
     width: 100%;
-    height: 860px;
+    height: 861px;
     margin-top: 68px;
 }
 
@@ -75,7 +75,7 @@
 
 .container__colum2__inner {
     /* background-color: #00000050; */
-    height: 50%;
+    /* height: 50%; */
 }
 
 .container__colum2__inner__select{
@@ -99,7 +99,7 @@
     max-width: 500px;
 }
 .container__colum2__inner2 {
-    height: 50%;
+    /* height: 50%; */
 }
 .container__colum2__inner3 {
     display: none;
