--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -192,6 +192,118 @@
     font-size: 12px;
     margin-bottom: 10px;
 }
+
+/* ====================== CONTAINER3 */
+.containerthree{
+    width: 100%;
+    height: 861px;
+    background-image: url(../img/background/2024_01_16_22_36_IMG_1178.JPG);
+    background-size: cover;
+    background-origin: content-box;
+    background-position: 50% 0%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+}
+.containerthree__select{
+    width: 100%;
+    max-width: 1000px;
+    padding-top: 100px;
+}
+.gymz-box{
+    display: flex;
+    flex-wrap: wrap;
+    width: 95%;
+    max-width: 500px;
+    height: auto;
+    background-color: #e7e7e7;
+    border-radius: 15px;
+    margin: 0 auto;
+    padding-bottom: 50px;
+    background-image: url(../img/promotion/istockphoto-1307181424-612x612.jpg);
+    background-size: cover;
+    background-origin: content-box;
+    background-position: 50% 0%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+}
+.gymz-element-box-title{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 500px;
+    justify-content: space-between;
+    margin: 20px 0;
+    
+}
+.gymz-title{
+    display: flex;
+    /* width: 100%; */
+    max-width: 500px;
+    margin: 0 20px;
+    font-weight: 600;
+}
+.gymz-line02{
+    display: flex;
+    height: 3px;
+    /* width: 100%; */
+    /* width: 324px; */
+    flex: 1;
+    background-color: black;
+}
+.gymz-icon-text{
+    display: flex;
+    /* align-items: center; */
+    text-align: center;
+    flex-direction: column;
+    width: 100%;
+    max-width: 166px;
+    /* width: 166px; */
+}
+.gymz-icon-text .fa-solid{
+    color: whitesmoke;
+    font-size: 40px;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+}
+.gymz-icon-text span{
+    width: 100%;
+    max-width: 156px;
+    height: 80px;
+    display: flex;
+    align-items: flex-start;
+    margin: 0 auto;
+    font-size: 12px;
+    margin: 0 5px;
+    margin-top: 15px;
+}
+.gymz-icon-text2{
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 500px;
+    height: 80px;
+    background-color: rgb(230, 0, 0);
+    color: white;
+    /* padding-right: 0px; */
+    /* flex-direction: column; */
+}
+.gymz-icon-text2 i{
+    font-size: 50px;
+    color: white;
+    margin-right: 10px;
+}
+.gymz-icon-text2 span{
+    display: flex;
+    position: absolute;
+    bottom: 15px;
+    left: 60px;
+    font-size: 11px;
+}
+/* .gymz-element-box{
+    display: flex;
+    flex-wrap: wrap;
+}  */
+
 /*======== ĐÂY LÀ PHẦN FOOTER */
 
 .footer {
