--- a/navigation_css/admin.css
+++ b/navigation_css/admin.css
@@ -131,6 +131,7 @@
     top: calc(100% + 4px);
     left: 6px;
     width: 100%;
+    z-index: 10;
 }
 
 .show__find_id{
@@ -187,9 +188,13 @@
 
 .container__show__cart__content{
     padding: 0px 6px;
+    position: relative;
 }
 
 .table__show{
+    /* position: relative;
+    top: 0; */
+    /* z-index: -1; */
     border-collapse: collapse;
     width: 100%;
     
