--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -223,7 +223,7 @@
 /* ====================== CONTAINER3 */
 .containerthree{
     width: 100%;
-    height: 861px;
+    height: auto;
     background-image: url(../img/background/2024_01_16_22_36_IMG_1178.JPG);
     background-size: cover;
     background-origin: content-box;
@@ -234,7 +234,8 @@
 .containerthree__select{
     width: 100%;
     max-width: 1000px;
-    padding-top: 100px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 .gymz-box{
     display: flex;
