--- a/css/header.css
+++ b/css/header.css
@@ -348,7 +348,13 @@
     /* right: calc(100vw - 300px); */
     width: 250px;
     height: 100vh;
-    background-color: black;
+    /* background-color: rgb(59, 131, 91); */
+    background-image: url(../img/promotion/dark-black-stone-texture-background-free-photo.jpg);
+    background-size: cover;
+    background-origin: content-box;
+    background-position: 50% 0%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
     /* top: 165px; */
     /* top: 100%;
     right: 0;
@@ -371,7 +377,7 @@
     display: flex;
     align-items: center;
     height: 60px;
-    background-color: black;
+    /* background-color: black; */
     color: white;
     font-size: 14px;
     font-weight: 600;
@@ -387,7 +393,8 @@
 }
 
 .content__inner:hover {
-    background-color: #222;
+    background-color: rgba(0, 0, 0, 0.2);
+    /* font-weight: 700; */
 }
 
 
@@ -485,13 +492,13 @@
 .noidung222 {
     display: none;
     
-    background-color: #111;
+    /* background-color: #111; */
 }
 
 .noidung222 a {
     font-family: montserrat;
     padding-left: 47px;
-    background-color: #111;
+    /* background-color: #111; */
 }
 
 .noidung222 a:hover {
