--- a/navigation_css/card.css
+++ b/navigation_css/card.css
@@ -78,6 +78,35 @@
   font-family: Courier New, monospace;
   transform: translate(3em,19em);
 }
+@media only screen and (max-width: 600px) {
+  .container--id {
+    width: 100%;
+    height: 500px;
+  }
+  .id1, .id2 {
+    width: 300px;
+    height: 125px;
+  }
+  .heading_logo{
+    font-size: .7em;
+    transform: translate(20em,1em);
+  }
+  .content-id{
+    position: absolute;
+    letter-spacing: .2em;
+    transform: translate(1.3em,3em);
+  }
+  .top-id{
+    font-size: 1em;
+  }
+  .bot-id{
+    font-size: 0.8em;
+  }
+  .name-id{
+    font-size: 0.5em;
+    transform: translate(1em, 13em);
+  }
+}
 .container--feature{
     margin-top: 30px;
     display: flex;
@@ -285,8 +314,3 @@ td:last-child {
   height: 10px;
 }
 
-i {
-  display: inline-block;
-  /* width: 5px;
-  height: 5px; */
-}
