--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -9,7 +9,7 @@ html{
     background-color: rgb(255, 255, 255);
 }
 body{
-    background-color: #1eff3c;
+    background-color: black;
 }
 .container {
     background-image: url(../img/background/bgr_pro3.png);
@@ -119,6 +119,9 @@ body{
     -webkit-transition: transform 300ms ease-in-out;
 }
 .start__img:hover{
+    scale: 1.02;
+}
+.start__img:active{
     scale: 1.02;
 }
 .container__colum2__inner {
