--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -9,7 +9,8 @@ html{
     background-color: rgb(255, 255, 255);
 }
 body{
-    background-color: black;
+    background-color: rgb(170, 0, 0);
+    -webkit-tap-highlight-color: transparent;
 }
 .container {
     background-image: url(../img/background/bgr_pro3.png);
@@ -115,8 +116,9 @@ body{
     max-width: 500px;
     height: 100%;
     max-height: 500px;
-    overflow: hidden;
+    /* overflow: hidden; */
     margin-top: 80px;
+    
     /* background-color: green; */
     /* height: 500px; */
 }
@@ -126,7 +128,7 @@ body{
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     /* transition: transform 5s; */
 }
 
@@ -145,12 +147,13 @@ body{
     background-repeat: no-repeat;
     transition: transform 300ms ease-in-out;
     -webkit-transition: transform 300ms ease-in-out;
+    -webkit-tap-highlight-color: transparent;
 }
 .start__img:hover{
     scale: 1.02;
 }
 .start__img:active{
-    scale: 1.02;
+    scale: 1.1;
 }
 
 .container__colum2__inner {
