--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -1005,7 +1005,123 @@ body{
 .vip__gift i {
     color: gold;
 }
+/* ========================= ĐÂY LÀ PHẦN FORM */
+.form__input{
+    position: fixed;
 
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* border: 1px solid #ccc; */
+    text-align: center;
+
+
+
+    /* top: 200px;
+    bottom: 0;
+    left: 0;
+    right: 0; */
+    /* background-color: green; */
+    width: 100%;
+    max-width: 500px;
+    height: 100%;
+    max-height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+
+    z-index: 100;
+
+}
+.form__input__select{
+    width: 90%;
+    max-width: 400px;
+    height: 90%;
+    max-height: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-image: url(../img/promotion/beautiful-background-dark-slate-stone-ideal-culinary-product-presentation-project_627281-105.avif);
+    background-size: cover;
+    background-origin: content-box;
+    background-position: 50% 0%;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    border-radius: 15px;
+    color: white;
+
+    box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.7);
+
+    border: 2px goldenrod solid;
+}
+.title__input{
+    height: 80px;
+    width: 90%;
+    /* background-color: goldenrod; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 17px;
+    font-weight: 600;
+    text-shadow: 0 0 10px black;
+    line-height: 1.5;
+    
+}
+.information__input{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.fullname{
+    height: 80px;
+    width: 90%;
+    max-width: 400px;
+}
+.title__input__box{
+    height: 25px;
+    width: 90%;
+    max-width: 400px;
+    display: flex;
+    margin-left: 20px;
+    text-shadow: 0 0 10px black;
+}
+.fullname__input__box{
+    height: 30px;
+    width: 90%;
+    
+    max-width: 400px;
+    border-radius: 15px;
+    border-style: none;
+    /* border-color: goldenrod; */
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+    outline: none;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.button{
+    width: 90%;
+    max-width: 400px;
+    /* background-color: green; */
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.button__request{
+    padding: 10px 15px;
+    border-radius: 15px;
+    border-style: none;
+    background-color: rgb(180, 0, 0);
+    color: white;
+    font-weight: 700;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+}
+.button__request:active{
+    background-color: rgb(130, 0, 0);
+}
 /* ================================================================================================== ĐÂY LÀ PHẦN ANIMATION */
 @keyframes slide_left {
     0% {
