--- a/css/tien.css
+++ b/css/tien.css
@@ -380,14 +380,14 @@
 
 /* The Modal (background) */
 .modal {
-    margin-top: 68px;
+    /* margin-top: 68px; */
     display: none;
     /* Hidden by default */
     position: fixed;
     /* Stay in place */
     z-index: 10;
     /* Sit on top */
-    padding-top: 100px;
+    /* padding-top: 100px; */
     /* Location of the box */
     left: 0;
     top: 0;
@@ -396,10 +396,8 @@
     height: 100%;
     /* Full height */
     overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
     /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.228);
     /* Black w/ opacity */
 }
 
